[tool.poetry]
name = "lf-web"
version = "0.1.0"
description = "Website for Lejre Fitness"
authors = ["Carsten Skov <carsten@simcax.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "2.3.3"
Flask-Session = "^0.5.0"
gunicorn = "^23.0.0"
Jinja2 = "^3.1.3"
redis = "^5.0.1"
loguru = "^0.7.2"
werkzeug = "2.3.8"
foreninglet-data = ">=0.3.3"
markdown = "^3.5.2"
markupsafe = "^2.1.5"
sentry-sdk = "^1.41.0"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
docker = "^7.0.0"
pytest = "^7.4.4"
testcontainers-redis = "^0.0.1rc1"
pylint = "^3.0.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
