[project]
name = "lfweb"
version = "0.1.0"
description = "Website for Lejre Fitness"
authors = [{ name = "Carsten Skov", email = "carsten@simcax.dk" }]
requires-python = "~=3.11"
readme = "README.md"

dependencies = [
    "Flask==2.3.3",
    "Flask-Session>=0.5.0,<0.6",
    "gunicorn>=23.0.0,<24",
    "Jinja2>=3.1.3,<4",
    "redis>=5.0.1,<6",
    "loguru>=0.7.2,<0.8",
    "werkzeug==3.0.6",
    "foreninglet-data>=0.3.3",
    "markdown>=3.5.2,<4",
    "markupsafe>=2.1.5,<3",
    "sentry-sdk>=1.41.0,<2",
    "pyyaml>=6.0.2,<7",
    "python-dotenv>=1.0.1,<2",
]

[dependency-groups]
dev = [
    "black>=23.12.1,<24",
    "docker>=7.0.0,<8",
    "pytest>=7.4.4,<8",
    "testcontainers-redis>=0.0.1rc1,<0.0.2",
    "pylint>=3.0.3,<4",
    "pytest-cov>=4.1.0,<5",
    "toml>=0.10.2",
]
