[project]
name = "lfweb"
version = "0.1.0"
description = "Website for Lejre Fitness"
authors = [{ name = "Carsten Skov", email = "carsten@simcax.dk" }]
requires-python = "~=3.11"
readme = "README.md"

dependencies = [
    "flask>=3.1.0",
    "flask-session>0.6.0",
    "gunicorn>=23.0.0,<24",
    "Jinja2>=3.1.3,<4",
    "redis>=5.0.1,<6",
    "loguru>=0.7.2,<0.8",
    "werkzeug>=3.1.0",
    "foreninglet-data>=0.3.3",
    "markdown>=3.5.2,<4",
    "markupsafe>=2.1.5,<3",
    "sentry-sdk>=2.8.0",
    "pyyaml>=6.0.2,<7",
    "python-dotenv>=1.0.1,<2",
    "testcontainers-postgres>=0.0.1rc1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy-utils>=0.41.2",
    "bs4>=0.0.2",
]

[dependency-groups]
dev = [
    "black>=23.12.1,<24",
    "docker>=7.0.0,<8",
    "pytest>=7.4.4,<8",
    "testcontainers-redis>=0.0.1rc1,<0.0.2",
    "pylint>=3.0.3,<4",
    "pytest-cov>=4.1.0,<5",
    "toml>=0.10.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that may require external services",
]
